add auth api to the backend

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,22 @@
+# Server Configuration
 NODE_ENV=development
 PORT=5005
-MONGODB_URI=mongodb://mongo:27017/myapp
-JWT_SECRET=your-super-secret-jwt-key
-CORS_ORIGIN=http://localhost:3000
+
+# Database
+#DB_USER=dviruliel0
+#DB_PASSWORD=0er8hf6aHmCL6LGB
+#DB_CLUSTER_ADDRESS=spacematecluster.rrxssja.mongodb.net
+MONGODB_URI=mongodb+srv://dviruliel0:0er8hf6aHmCL6LGB@spacematecluster.rrxssja.mongodb.net/?retryWrites=true&w=majority&appName=SpaceMateCluster
+
+# JWT Configuration
+JWT_SECRET=spacemate_secret_4321
+JWT_REFRESH_SECRET=spacemate_refresh_secret_4321
+
+# Frontend URL for CORS
+FRONTEND_URL=http://localhost:3000
+
+# Bcrypt rounds (optional, defaults to 12)
+BCRYPT_ROUNDS=12
+
+
+
