--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -17,6 +17,11 @@ COPY tsconfig.json ./
 # Copy source code
 COPY . .
 
+# Set environment for build
+# The NEXT_PUBLIC_API_URL will be set by docker-compose
+ARG NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
+
 # Build Next.js app
 RUN npm run build
 
